--- a/Index.HTML
+++ b/Index.HTML
@@ -6,7 +6,19 @@
 </head>
 <body>
 
-    <h1>Hello, World!</h1>
-    <p>Welcome to your new HTML file.</p>
+    <p style="color:rebeccapurple; font-size:20px; font-family:cursive;"> 
+        Angel Williams
+    </p>
+
+    <a href="https://www.bbc.com/" target="_blank" title="A link to the BBC News.">BBC News</a>
+    
+    <p style="color:blue; font-size:20px; font-family:Arial;">
+       Welcome to my website! Find the latest news here!!
+
+    <ul style="list-style-type:circle;">
+        <li>Breaking</li>
+        <li>News</li>
+        <li>Grenada</li>
+
 </body>
 </html>
