--- a/Index.HTML
+++ b/Index.HTML
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Welcome!</title>
 </head>
-<body>
+<body style="background-color: aquamarine;">
 
-    <p style="color:rebeccapurple; font-size:20px; font-family:cursive;"> 
+    <p style="color:purple; font-size:20px; font-family:fantasy;"> 
         Angel Williams
     </p>
 
@@ -15,10 +15,25 @@
     <p style="color:blue; font-size:20px; font-family:Arial;">
        Welcome to my website! Find the latest news here!!
 
-    <ul style="list-style-type:circle;">
+    <ul style="list-style-type:lower-greek;">
         <li>Breaking</li>
         <li>News</li>
         <li>Grenada</li>
+<br>
+        <ol>
+            <li> Do </li>
+            <li> Not </li>
+            <li> Gamble </li>
+        </ol>
+<br>
 
+        <h2 style ="color: purple; font-size:15px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+            "The more you read, the more things you will know. The more that you learn, the more places you'll go." - Dr. Seuss
+        </h2>
+
+<br>
+        <img srcset="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsVElG1mHnr6oGMZa_FhCWF5iEXcKLbbF89A&s" alt="Anime" title="Anime" width="280" height="190">
+    </ul>
+    </p>      
 </body>
 </html>
